# PoolAllocator

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: bench_all.cpp  bench_allocation.cpp  bench_bulk.cpp  bench_bulk_allocation.cpp  bench_constructor.cpp  bench_helper.h  bench_lifecycle.cpp  bench_object_lifecycle.cpp  bench_reset.cpp  bench_throughput.cpp
cmake/: PoolProConfig.cmake.in
examples/: example_basic.cpp  example_helper.h  example_lifecycle.cpp  example_stats.cpp
include/: Pool.h  Pool.tpp
include/PoolPro/: Contract.h  Pool.h  Pool.tpp
tests/: test_all.cpp  test_constructor.cpp  test_edge.cpp  test_edge_cases.cpp  test_helper.h  test_introspection.cpp  test_lifecycle.cpp  test_memory.cpp  test_memory_allocation.cpp  test_move.cpp  test_object_lifecycle.cpp  test_pool_management.cpp  test_state.cpp  test_stats.cpp
